--- a/styles/sections.css
+++ b/styles/sections.css
@@ -10,6 +10,7 @@
   border-radius: 4px;
   overflow: hidden;
   position: relative;
+  
   &::before {
     content:"" ;
     position: absolute;
@@ -20,12 +21,15 @@
   transparent 0%,
   #020617 100%
 );
-  }
-
+}
   figcaption {
     position: absolute;
     bottom: 0;
     padding: 24px;
+
+    &:has(.text-lg){
+      padding: 12px;
+    }
   }
 
   h2 {
