--- a/styles/global.css
+++ b/styles/global.css
@@ -12,7 +12,7 @@
   --text-color-primary: #F1F5F9 ;
   --text-color-secondary:#CBD5E1;
 
-  --font-family: 'archivo', sans-serif ;
+  --font-family: 'Archivo', sans-serif ;
   --h1: 800 24px/135% var(--font-family) ;
   --h2: 800 16px/140% var(--font-family);
   --h3: 800 14px/140% var(--font-family);
@@ -53,6 +53,7 @@ img {
 
 main {
   margin-top: 40px;
+  gap: 80px;
 }
 
 .content-tag {
