--- a/styles/utility.css
+++ b/styles/utility.css
@@ -1,9 +1,9 @@
-/* utility-first */
+/*utility first*/
 
 .grid {
   display: grid;
-}
 
+}
 .grid-flow-col {
   grid-auto-flow: column;
 }
@@ -11,13 +11,11 @@
 .grid-cols-2 {
   grid-template-columns: 1fr 1fr;
 }
-
 .gap-16 {
   gap: 16px;
 }
-
 .gap-32 {
-  gap:32px;
+  gap: 32px;
 }
 
 .text-2xl {
